--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^5.22.0",
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.6.2",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
     "prisma": "^5.0.0",
